--- a/src/html/template.html
+++ b/src/html/template.html
@@ -6,6 +6,30 @@
     <title>Weather App</title>
 </head>
 <body>
-    
+   
+    <div class="main">
+        <div class="control">
+            <div class="search-container">
+                <input type="search" name="search" id="search">
+            </div>
+            <div class="temp-switch">
+                <label class="switch">
+                    <input type="checkbox" name="switch" id="switch" checked>
+                    <span class="slider round"></span>
+                  </label>
+                
+            </div>
+        </div>
+        <div class="top">
+            <div class="now">
+                <div class="location-container"></div>
+                <div class="cloud-container"></div>
+                <div class="temp-container"></div>
+            </div>
+        </div>
+        <div class="mid">
+            <div class="additional"></div>
+        </div>
+    </div>
 </body>
 </html>
