--- a/src/html/template.html
+++ b/src/html/template.html
@@ -31,6 +31,7 @@
             <div class="additional"></div>
             
         </div>
+        <div class="error-container"></div>
     </div>
 </body>
 </html>
